# ML_DL_MINE

ML_DL_base/: EM算法.ipynb  KNN.ipynb  层次聚类.ipynb  感知机.ipynb  提升方法.ipynb  朴素贝叶斯.ipynb  统计学习概论.ipynb
ML_DL_base/.ipynb_checkpoints/: P问题_NP问题_NP难问题-checkpoint.ipynb  logistic回归-checkpoint.ipynb  matrx caculus-checkpoint.ipynb
ML_DL_base/ML_code/: HMM.py  adaboost.py  cluster.py  crf.py  decision_tree.py  kNN.py  logistic_regression&most_cropy.py  naiveBayes.py  pca.py  perception.py  svm.py
ML_DL_base/ML基础/: 经验误差.ipynb
ML_DL_base/k-means/: k-means算法.ipynb
ML_DL_base/logistic_softmax回归/: logistic回归.ipynb  softmax回归.ipynb  凸优化.ipynb
ML_DL_base/loss/: bbox_regression_loss.ipynb  label smoothing.ipynb  分类损失.ipynb  双曲正弦_双曲余弦_双曲正切.ipynb  回归损失.ipynb
ML_DL_base/matrix caculus/: matrx caculus.ipynb  伴随矩阵.ipynb  迹运算与矩阵求导.ipynb
ML_DL_base/nearal_network/: 万能复用定理.ipynb
ML_DL_base/svm/: SMO算法.ipynb  SVR.ipynb  kkt条件.ipynb  sgn函数.ipynb  函数距离与几何距离.py.ipynb  基本型.ipynb  对偶问题.ipynb  核函数.ipynb  软间隔SVM.ipynb
ML_DL_base/偏差_方差/: 偏差_方差_偏差方差分解.ipynb  期望_方差_协方差.ipynb
ML_DL_base/梯度下降算法/: AdaDelta.ipynb  BP算法.ipynb  Nadam.ipynb  RMSProp.ipynb  bias的作用.ipynb  exponenially_weighted_moving_average.ipynb  动量梯度下降算法.ipynb  拟牛顿法_DFP_BFGS_L-BFGS.ipynb  方向导数与梯度.ipynb  无偏性_有效性_一致性.ipynb  梯度下降法.ipynb  矩估计.ipynb  驻点_拐点_鞍点_单调性_凹凸性.ipynb
ML_DL_base/正则化/: l1正则化与L2正则化.ipynb  最大后验估计角度解释L1与L2正则化.ipynb  正则化的原理.ipynb
ML_DL_base/激活函数/: elu.ipynb  gelu.ipynb  leaky_relu_prelu_rrelu.ipynb  relu.ipynb  selu.ipynb  sigmoid_tanh.ipynb  silu_swish.ipynb
ML_DL_base/神经网络_BP算法/: BP算法.ipynb
ML_DL_base/线性回归/: MAE的推导.ipynb  线性回归.ipynb
classificaion&computer_vision/.ipynb_checkpoints/: conv层-checkpoint.ipynb  pooling层及其变种-checkpoint.ipynb
classificaion&computer_vision/backbone/: CSPNet.ipynb  GoogLeNet(Inceptionv1).ipynb  densenet.ipynb  inceptionv2&v3.ipynb  inceptionv4&inception_resnet.ipynb  (+7 more)
deploy/: bug记录.ipynb  cmake常用变量与指令.txt
deploy/nz_face_lite_rknn_v3/: CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt.yufan  build.sh  model_transfer.py
deploy/nz_face_lite_rknn_v3/docs/: RV1109编译以及一些坑.md  Tutorial .md
deploy/nz_face_lite_rknn_v3/encry_models/: models.yaml
deploy/nz_face_lite_rknn_v3/lujun_test/: detect_memory.cpp  facedetect_test.cpp  feature_test.cpp  landmark_test.cpp  live_rgb_ir.cpp  live_test.cpp  quality_test.cpp  rgb_live.cpp  rgb_live_jpy.cpp  silent_ir.cpp  silent_ir_fold.cpp
deploy/nz_face_lite_rknn_v3/src/: fatigue_recog.cpp  fatigue_val.cpp  main.cc  main.cc.bak
deploy/nz_face_lite_rknn_v3/src/face/: face_landmark.cpp  face_landmark.h  face_quality.cpp  face_quality.h  feature_extract.cpp  feature_extract.h  live_rgb.cpp  live_rgb.h  retinafacev2.cpp  retinafacev2.h  silent_live_ir.cpp  silent_live_ir.h  utils.h
deploy/nz_face_lite_rknn_v3/src/fatigue/: mobilenet.cpp  mobilenet.h
deploy/nz_face_lite_rknn_v3/src/model_infer/: model_infer.h  rknn_infer.cpp  rknn_infer.h  trial.h  zip_wrapper.cpp
deploy/nz_face_lite_rknn_v3/src/tools/: .quality_test.cpp.swp  face_all_alg.cpp  face_all_alg_new.cpp  face_detect_tool.cpp  feature_extract_tool.cpp  feature_extract_tool.cpp.bak  helper.h  landmark_test.cpp  livness_ir_tool.cpp  quality_test.cpp
deploy/torch_c++/conv_cp/: CMakeLists.txt
deploy/torch_c++/conv_cp/include/: convnet.h
deploy/torch_c++/conv_cp/src/: convnet.cpp  main.cpp
deploy/torch_c++/end2end_demo/: CMakeLists.txt  main.cpp
deploy/torch_c++/mini_demo/: CMakeLists.txt  main.cpp  trial
model_compression_speedup/: 混合精度训练.ipynb
object_detection/: FPN.ipynb  RCNN.ipynb  canny.py  faster rcnn.ipynb  focal loss_retinanet.ipynb  gridsearch.py  hog特征.ipynb  mask_rcnn.ipynb  r-rcf.ipynb  selective search.ipynb  ssd.ipynb  torch_bug_records.ipynb  yolo.ipynb  yolov2.ipynb  yolov4.ipynb  yolov5.ipynb
(+439 files in other folders)
