cmake_minimum_required(VERSION 3.10)
project(torch_demo)

find_package(Torch REQUIRED)
message("--------------${TORCH_CXX_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${torch_CXX_FLAGS}")
add_executable(main main.cpp)
message("${TORCH_LIBRARIES}")
target_link_libraries(main "${TORCH_LIBRARIES}")
set_property(TARGET main PROPERTY CXX_STANDARD 14)
